# flower

./: AGENTS.md  README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/actions/bootstrap/: action.yml
.github/workflows/: _docker-build.yml  _repo-authorize-manual-trigger.yml  build-deploy-non-framework-docs.yml  datasets-e2e.yml  datasets-test.yml  devtool-test.yml  framework-cache-cleanup.yml  framework-docker-build-main.yml  framework-docs-update-translations.yml  framework-docs.yml  framework-e2e.yml  framework-release-nightly.yml  framework-release.yml  framework-test.yml  intelligence-docs.yml  intelligence-release.yml  intelligence-ts.yml  repo-check-uv-lock.yml
baselines/dasha/: pyproject.toml
baselines/depthfl/: pyproject.toml
baselines/dev/: format-baseline.sh  test-baseline.sh
baselines/dev/baseline/: pyproject.toml
baselines/docs/source/: conf.py
baselines/fedavgm/: pyproject.toml
baselines/fedbn/: pyproject.toml
baselines/feddebug/: pyproject.toml
baselines/fedmeta/: pyproject.toml
baselines/fedmlb/: pyproject.toml
baselines/fednova/: pyproject.toml
baselines/fedpara/: pyproject.toml
baselines/fedper/: pyproject.toml
baselines/fedpft/: pyproject.toml
baselines/fedprox/: pyproject.toml
baselines/fedrep/: pyproject.toml
baselines/fedstar/: pyproject.toml
baselines/fedvssl/: pyproject.toml
baselines/fedwav2vec2/: pyproject.toml
baselines/fjord/: pyproject.toml
baselines/flanders/: pyproject.toml
baselines/floco/: pyproject.toml
baselines/flwr_baselines/: pyproject.toml  requirements.txt
baselines/flwr_baselines/dev/: format.sh  test.sh
baselines/heterofl/: pyproject.toml
baselines/hfedxgboost/: pyproject.toml
baselines/moon/: pyproject.toml
baselines/niid_bench/: pyproject.toml
baselines/statavg/: pyproject.toml
baselines/tamuna/: pyproject.toml
benchmarks/flowertune-llm/: README.md
datasets/: pyproject.toml
datasets/dev/: format.sh  publish.sh  test.sh
datasets/docs/source/: conf.py  how-to-install-flwr-datasets.rst
datasets/e2e/pytorch/: pyproject.toml  pytorch_test.py
datasets/e2e/scikit-learn/: pyproject.toml
datasets/e2e/tensorflow/: pyproject.toml
datasets/flwr_datasets/common/: telemetry.py
dev/: README.md  bootstrap-uv.sh  bootstrap.sh  build-model-docs.sh  changelog_config.toml  docs-ui-config.yml  format.sh  pyproject.toml  setup-defaults.sh  venv-create.sh  venv-delete.sh  venv-reset.sh
dev/devtool/: check_pr_title.py  protoc.py  update_html_themes.py  update_html_themes_test.py
examples/advanced-pytorch/: README.md  pyproject.toml
examples/advanced-pytorch/pytorch_example/: task.py
examples/custom-mods/: pyproject.toml
examples/custom-mods/custom_mods/: mods.py
examples/docs/source/: conf.py
examples/embedded-devices/: device_setup.md  pyproject.toml
examples/federated-analytics/: pyproject.toml
examples/federated-kaplan-meier-fitter/: README.md  pyproject.toml
examples/federated-vae/: README.md  pyproject.toml
examples/fedrag/: README.md  pyproject.toml
examples/fedrag/fedrag/: task.py
examples/fl-dp-sa/: README.md  pyproject.toml
examples/fl-tabular/: README.md  pyproject.toml
examples/flower-secure-aggregation/: README.md  pyproject.toml
examples/flower-simulation-step-by-step-pytorch/my-awesome-app/: pyproject.toml
examples/flowertune-llm/: README.md  pyproject.toml
examples/flowertune-llm-code/: README.md  pyproject.toml
examples/flowertune-llm-finance/: README.md  pyproject.toml
examples/flowertune-llm-general-nlp/: README.md  pyproject.toml
examples/flowertune-llm-medical/: README.md  pyproject.toml
examples/flowertune-vit/: README.md  pyproject.toml
examples/opacus/: README.md  pyproject.toml
examples/opacus/opacus_fl/: task.py
examples/quickstart-catboost/: README.md  pyproject.toml
examples/quickstart-catboost/quickstart_catboost/: client_app.py  task.py
examples/quickstart-fastai/: README.md  pyproject.toml
examples/quickstart-fastai/fastai_example/: server_app.py
examples/quickstart-huggingface/: README.md  pyproject.toml
examples/quickstart-huggingface/huggingface_example/: server_app.py
examples/quickstart-jax/: README.md  pyproject.toml
examples/quickstart-jax/jaxexample/: server_app.py  task.py
examples/quickstart-lerobot/: pyproject.toml
examples/quickstart-mlx/: README.md  pyproject.toml
examples/quickstart-mlx/mlxexample/: server_app.py
examples/quickstart-monai/: README.md  pyproject.toml
examples/quickstart-monai/monaiexample/: server_app.py
examples/quickstart-numpy/: README.md  pyproject.toml
examples/quickstart-pandas/: README.md  pyproject.toml
examples/quickstart-pennylane/: README.md  pyproject.toml
examples/quickstart-pytorch/: pyproject.toml
examples/quickstart-pytorch-lightning/: README.md  pyproject.toml
examples/quickstart-pytorch-lightning/pytorchlightning_example/: server_app.py
examples/quickstart-sklearn/: README.md  pyproject.toml
examples/quickstart-sklearn/sklearnexample/: server_app.py
examples/quickstart-tensorflow/: README.md  pyproject.toml
examples/quickstart-tensorflow/tfexample/: server_app.py
examples/quickstart-xgboost/: README.md  pyproject.toml
examples/quickstart-xgboost/quickstart_xgboost/: server_app.py
examples/supernode-authentication/: pyproject.toml
examples/vertical-fl/: README.md  pyproject.toml
examples/whisper-federated-finetuning/: README.md  pyproject.toml
examples/xgboost-comprehensive/: README.md  pyproject.toml
framework/: AGENTS.md  FASTAPI.md  README.md  pyproject.toml  uv.md
framework/dev/: build-docker-image-matrix.py  check-migrations.sh  format.sh  generate_migration.py  prepare-framework.sh  publish-nightly.sh  test.sh  update_changelog.py
framework/docker/base/: README.md
framework/docs/: Makefile
framework/e2e/: test_control_api.sh  test_reconnection.sh  test_serverapp_heartbeat.py  test_superlink.sh
framework/py/flwr/agentapp/builtin/: __init__.py  flwr_agent.py  pyproject.toml  resolver.py
hub/apps/: federated-vae
intelligence/ts/: package.json  pnpm-lock.yaml
(+695 files in other folders)
