[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "federated-vae"
version = "1.1.6"
description = "Federated Variational Autoencoder Example with PyTorch and Flower"
license = { file = "LICENSE" }
dependencies = [
    "flwr[simulation]>=1.28.0",
    "flwr-datasets[vision]>=0.6.0",
    "hf_transfer==0.1.9",
    "torch==2.10.0",
    "torchvision==0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.32.1"
fab-include = ["fedvaeexample/**/*.py", "LICENSE"]

[tool.flwr.app.components]
serverapp = "fedvaeexample.server_app:app"
clientapp = "fedvaeexample.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
local-epochs = 1
learning-rate = 0.001
