[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-dp-sa"
version = "1.1.1"
description = "Central Differential Privacy and Secure Aggregation in Flower"
license = { file = "LICENSE" }
dependencies = [
    "flwr[simulation]>=1.28.0",
    "flwr-datasets[vision]>=0.6.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.29.0"

[tool.flwr.app.components]
serverapp = "fl_dp_sa.server_app:app"
clientapp = "fl_dp_sa.client_app:app"

[tool.flwr.app.config]
# Parameters for the DP
noise-multiplier = 0.2
clipping-norm = 10
num-sampled-clients = 20
# Parameters for the SecAgg+ protocol
num-shares = 7
reconstruction-threshold = 4
