[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-tabular"
version = "1.1.1"
description = "Adult Census Income Tabular Dataset and Federated Learning in Flower"
license = { file = "LICENSE" }
dependencies = [
    "flwr[simulation]>=1.28.0",
    "flwr-datasets>=0.6.0",
    "torch==2.8.0",
    "scikit-learn==1.7.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.29.0"

[tool.flwr.app.components]
serverapp = "fltabular.server_app:app"
clientapp = "fltabular.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5

