[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opacus-fl"
version = "1.1.0"
description = "Sample-level Differential Privacy with Opacus in Flower"
license = {file = "LICENSE"}
dependencies = [
    "flwr[simulation]>=1.28.0",
    "flwr-datasets[vision]>=0.6.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "opacus==v1.5.4",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.28.0"

[tool.flwr.app.components]
serverapp = "opacus_fl.server_app:app"
clientapp = "opacus_fl.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
target-delta = 1e-5
max-grad-norm = 1.0
