[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-catboost"
version = "1.1.1"
description = "Federated Learning with CatBoost and Flower (Quickstart Example)"
license = {file = "LICENSE"}
dependencies = [
    "flwr[simulation]>=1.28.0",
    "flwr-datasets>=0.6.0",
    "catboost==1.2.8",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.29.0"

[tool.flwr.app.components]
serverapp = "quickstart_catboost.server_app:app"
clientapp = "quickstart_catboost.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
fraction-sample = 1.0
local-epochs = 1
learning-rate = 0.1
depth = 6
