[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-monai"
version = "1.1.1"
description = "Federated Learning with MONAI and Flower (Quickstart Example)"
license = {file = "LICENSE"}
dependencies = [
    "flwr[simulation]>=1.28.0",
    "flwr-datasets[vision]>=0.6.0",
    "monai==1.5.2",
    "filelock==3.20.3",
    "numpy>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.29.0"

[tool.flwr.app.components]
serverapp = "monaiexample.server_app:app"
clientapp = "monaiexample.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
fraction-train = 0.5
batch-size = 128
