[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-pytorch-lightning"
version = "1.1.1"
description = "Federated Learning with PyTorch Lightning and Flower (Quickstart Example)"
license = {file = "LICENSE"}
dependencies = [
    "flwr[simulation]>=1.28.0",
    "flwr-datasets[vision]>=0.6.0",
    "pytorch-lightning==2.5.5",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.29.0"

[tool.flwr.app.components]
serverapp = "pytorchlightning_example.server_app:app"
clientapp = "pytorchlightning_example.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
max-epochs = 1
