[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-tensorflow"
version = "1.1.8"
description = "Federated Learning with Tensorflow/Keras and Flower (Quickstart Example)"
license = {file = "LICENSE"}
dependencies = [
    "flwr[simulation]>=1.28.0",
    "flwr-datasets[vision]>=0.6.0",
    "tensorflow==2.20.0",
]
[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.32.1"

[tool.flwr.app.components]
serverapp = "tfexample.server_app:app"
clientapp = "tfexample.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
local-epochs = 1
batch-size = 32
learning-rate = 0.005
fraction-train = 1.0
verbose = false
save-model = false
