[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-xgboost"
version = "1.1.7"
description = "Federated Learning with XGBoost and Flower (Quickstart Example)"
license = {file = "LICENSE"}
dependencies = [
    "flwr[simulation]>=1.28.0",
    "flwr-datasets>=0.6.0",
    "xgboost>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.32.1"

[tool.flwr.app.components]
serverapp = "quickstart_xgboost.server_app:app"
clientapp = "quickstart_xgboost.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-train = 1.0
fraction-evaluate = 1.0
local-epochs = 1
save-model = false

# XGBoost parameters
params.objective = "binary:logistic"
params.eta = 0.1 # Learning rate
params.max-depth = 8
params.eval-metric = "auc"
params.nthread = 16
params.num-parallel-tree = 1
params.subsample = 1
params.tree-method = "hist"
