[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supernode-authentication"
version = "1.1.1"
description = "Federated Learning with PyTorch and authenticated Flower "
license = {file = "LICENSE"}
dependencies = [
    "flwr>=1.28.0",
    "flwr-datasets[vision]>=0.6.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "cryptography>=44.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.29.0"

[tool.flwr.app.components]
serverapp = "authexample.server_app:app"
clientapp = "authexample.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-evaluate = 0.5
local-epochs = 1
learning-rate = 0.1
batch-size = 32
